seachBtn is now clickable

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         <input type="text" id="username" class="input" placeholder="user name...">
                     </form>
                     <div class="btn">
-                        <p id="btn-search"> Search</p>
+                        <p id="searchBtn"> Search</p>
                     </div>
                 </br>
                     
