--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
     <div class="wrapper">
         <div class="header">
-            <p>Github User Search</p>
+            <p>Github User Profile</p>
         </div>
         <div class="container">
             <div class="search_wrap search_wrap_5">
